fix(bugs): a lot of bugs
